--- a/homework-feb-15.ipynb
+++ b/homework-feb-15.ipynb
@@ -117,26 +117,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
-   "id": "415fa074-726d-400e-b8d4-f605abb784d9",
+   "execution_count": 102,
+   "id": "137a63f4-20e0-46c1-8ea1-2412e19a8f01",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chicago murder rate= 28.170055452865068\n"
+      "Chicago has the highest murder rate of 28.170055452865068 per 100k while NYC has the lowest murder rate of 3.911923167018037 per 100k\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Chicago murder rate= {Chicago_murder_rate}\")"
+    "print(f\"Chicago has the highest murder rate of {Chicago_murder_rate:,} per 100k while NYC has the lowest murder rate of {NYC_murder_rate:,} per 100k\") "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7f1cb04-4d03-4642-bbf0-13fc6919bff2",
+   "id": "e86e1040-3a0e-4918-9136-5902c21436ff",
    "metadata": {},
    "outputs": [],
    "source": []
